# resume-constructor

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: resume.md
.github/: pull_request_template.md
profile/: professional_profile_template.md
scripts/: setup.sh
skills/construct/: SKILL.md
skills/construct/tools/: build_cv.py
skills/construct/workflows/: format_constraints.md
skills/format/: SKILL.md
skills/format/tools/: build_cv.py
skills/setup/: SKILL.md
workflows/: job_application.md
