[project]
name = "resume"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.193.0",
    "google-auth-oauthlib>=1.3.0",
    "ipython>=9.10.1",
    "openpyxl>=3.1.5",
    "python-docx>=1.2.0",
    "weasyprint>=68.1",
]
